--- a/docs/_static/references.bib
+++ b/docs/_static/references.bib
@@ -1,18 +1,16 @@
-## Entries are sorted by category, date, an finaly author.
+## Entries are sorted by category, date, and finally author.
 # Cubature on Wiener Space
 @article{lyons2004,
-  issn      = {13645021},
-  url       = {https://www.jstor.org/stable/4143098},
-  abstract  = {It is well known that there is a mathematical equivalence between 'solving' parabolic partial differential equations (PDEs) and 'the integration' of certain functionals on Wiener space. Monte Carlo simulation of stochastic differential equations (SDEs) is a naive approach based on this underlying principle. In finite dimensions, it is well known that cubature can be a very effective approach to integration. We discuss the appropriate extension of this idea to Wiener space. In the process we develop high-order numerical schemes valid for high-dimensional SDEs and semi-elliptic PDEs.},
-  author    = {Lyons, Terry and Victoir, Nicolas},
-  journal   = {Proceedings: Mathematical, Physical and Engineering Sciences},
-  number    = {2041},
-  pages     = {169--198},
-  publisher = {The Royal Society},
   title     = {Cubature on Wiener Space},
-  urldate   = {2023-07-10},
+  author    = {Lyons, Terry and Victoir, Nicolas},
+  year      = {2004},
+  journal   = {Proceedings: Mathematical, Physical and Engineering Sciences},
+  publisher = {The Royal Society},
+  number    = {2041},
   volume    = {460},
-  year      = {2004}
+  pages     = {169--198},
+  issn      = {13645021},
+  url       = {https://www.jstor.org/stable/4143098}
 }
 
 @misc{crisan2017cubature,
@@ -28,35 +26,78 @@
 @book{kloeden1992,
   title     = {Numerical Solution of Stochastic Differential Equations},
   author    = {Kloeden, Peter E. and Platen, Eckhard},
+  year      = {1992},
   publisher = {Springer Berlin, Heidelberg},
   pages     = {636},
-  year      = {1992},
   doi       = {10.1007/978-3-662-12616-5},
   isbn      = {978-3-540-54062-5}
 }
 
+@misc{allan2021,
+  title  = {Rough Path Theory: Lecture Notes},
+  author = {Allan, Andrew L.},
+  year   = {2021},
+  url    = {https://metaphor.ethz.ch/x/2021/fs/401-4611-21L/}
+}
+
 # Cubature
-@book{stroud1971,
-  title     = {Approximate Calculation of Multiple Integrals},
-  author    = {Stoud, A. H.},
-  publisher = {Prentice-Hall},
-  pages     = {431},
-  year      = {1971},
-  isbn      = {9780130438935}
+@article{davis1967,
+  title     = {A Construction of Nonnegative Approximate Quadratures},
+  author    = {Philip J. Davis},
+  year      = {1967},
+  journal   = {Mathematics of Computation},
+  publisher = {American Mathematical Society},
+  number    = {100},
+  pages     = {578--582},
+  urldate   = {2023-08-04},
+  volume    = {21},
+  issn      = {00255718, 10886842},
+  url       = {http://www.jstor.org/stable/2005001}
 }
 
 
 @article{stroudSecrest1963,
-  issn      = {00255718, 10886842},
-  url       = {http://www.jstor.org/stable/2003633},
+  title     = {Approximate Integration Formulas for Certain Spherically Symmetric Regions},
   author    = {Stroud, A. H. and Secrest, Don},
+  year      = {1963},
   journal   = {Mathematics of Computation},
   number    = {82},
   pages     = {105--135},
   publisher = {American Mathematical Society},
-  title     = {Approximate Integration Formulas for Certain Spherically Symmetric Regions},
-  urldate   = {2023-07-29},
   volume    = {17},
-  year      = {1963}
+  issn      = {00255718, 10886842},
+  url       = {http://www.jstor.org/stable/2003633}
 }
 
+@book{stroud1971,
+  title     = {Approximate Calculation of Multiple Integrals},
+  author    = {Stoud, A. H.},
+  year      = {1971},
+  publisher = {Prentice-Hall},
+  pages     = {431},
+  isbn      = {9780130438935}
+}
+
+@article{mysovskikh1975,
+  title   = {On Chakalov's theorem},
+  author  = {I.P. Mysovskikh},
+  year    = {1975},
+  journal = {USSR Computational Mathematics and Mathematical Physics},
+  volume  = {15},
+  number  = {6},
+  pages   = {221-227},
+  issn    = {0041-5553},
+  doi     = {https://doi.org/10.1016/0041-5553(75)90218-9},
+  url     = {https://www.sciencedirect.com/science/article/pii/0041555375902189}
+}
+
+@article{cools1997,
+  title     = {Constructing cubature formulae: the science behind the art},
+  author    = {Cools, Ronald},
+  year      = {1997},
+  journal   = {Acta Numerica},
+  publisher = {Cambridge University Press},
+  pages     = {1-54},
+  volume    = {6},
+  doi       = {10.1017/S0962492900002701}
+}
