Updated from scratch docs and conf.

--- a/docs/_static/references.bib
+++ b/docs/_static/references.bib
@@ -1,44 +1,4 @@
 ## Entries are sorted by category, date, and finally author.
-# Cubature on Wiener Space
-@article{lyons2004,
-  title     = {Cubature on Wiener Space},
-  author    = {Lyons, Terry and Victoir, Nicolas},
-  year      = {2004},
-  journal   = {Proceedings: Mathematical, Physical and Engineering Sciences},
-  publisher = {The Royal Society},
-  number    = {2041},
-  volume    = {460},
-  pages     = {169--198},
-  issn      = {13645021},
-  url       = {https://www.jstor.org/stable/4143098}
-}
-
-@misc{crisan2017cubature,
-  title         = {Cubature on Wiener Space for McKean-Vlasov SDEs with Smooth Scalar Interaction},
-  author        = {Crisan, Dan and McMurray, Eamon},
-  year          = {2017},
-  eprint        = {1703.04177},
-  archiveprefix = {arXiv},
-  primaryclass  = {math.PR}
-}
-
-# Stochastic Calculus
-@book{kloeden1992,
-  title     = {Numerical Solution of Stochastic Differential Equations},
-  author    = {Kloeden, Peter E. and Platen, Eckhard},
-  year      = {1992},
-  publisher = {Springer Berlin, Heidelberg},
-  pages     = {636},
-  doi       = {10.1007/978-3-662-12616-5},
-  isbn      = {978-3-540-54062-5}
-}
-
-@misc{allan2021,
-  title  = {Rough Path Theory: Lecture Notes},
-  author = {Allan, Andrew L.},
-  year   = {2021},
-  url    = {https://metaphor.ethz.ch/x/2021/fs/401-4611-21L/}
-}
 
 # Cubature
 @article{davis1967,
@@ -85,7 +45,7 @@
   journal = {USSR Computational Mathematics and Mathematical Physics},
   volume  = {15},
   number  = {6},
-  pages   = {221-227},
+  pages   = {221--227},
   issn    = {0041-5553},
   doi     = {https://doi.org/10.1016/0041-5553(75)90218-9},
   url     = {https://www.sciencedirect.com/science/article/pii/0041555375902189}
@@ -99,5 +59,68 @@
   publisher = {Cambridge University Press},
   pages     = {1-54},
   volume    = {6},
-  doi       = {10.1017/S0962492900002701}
+  doi       = {https://doi.org/10.1017/S0962492900002701}
+}
+
+@article{satoshi2021,
+  title   = {Monte Carlo cubature construction},
+  author  = {Satoshi Hayakawa},
+  year    = {2021},
+  journal = {Japan Journal of Industrial and Applied Mathematics},
+  volume  = {38},
+  pages   = {561--577},
+  doi     = {https://doi.org/10.1007/s13160-020-00451-x}
+}
+
+# Cubature on Wiener Space
+@article{lyons2004,
+  title     = {Cubature on Wiener Space},
+  author    = {Lyons, Terry and Victoir, Nicolas},
+  year      = {2004},
+  journal   = {Proceedings: Mathematical, Physical and Engineering Sciences},
+  publisher = {The Royal Society},
+  number    = {2041},
+  volume    = {460},
+  pages     = {169--198},
+  issn      = {13645021},
+  url       = {https://www.jstor.org/stable/4143098}
+}
+
+@misc{crisan2017cubature,
+  title         = {Cubature on Wiener Space for McKean-Vlasov SDEs with Smooth Scalar Interaction},
+  author        = {Crisan, Dan and McMurray, Eamon},
+  year          = {2017},
+  eprint        = {1703.04177},
+  archiveprefix = {arXiv},
+  primaryclass  = {math.PR}
+}
+
+# Ordinary Calculus
+@inbook{iserles2008,
+  booktitle = {A First Course in the Numerical Analysis of Differential Equations},
+  title     = {Runge–Kutta methods},
+  author    = {Iserles, Arieh},
+  year      = {2008},
+  edition   = {2},
+  publisher = {Cambridge University Press},
+  pages     = {33–52},
+  doi       = {https://doi.org/10.1017/CBO9780511995569.006}
+}
+
+# Stochastic Calculus
+@book{kloeden1992,
+  title     = {Numerical Solution of Stochastic Differential Equations},
+  author    = {Kloeden, Peter E. and Platen, Eckhard},
+  year      = {1992},
+  publisher = {Springer Berlin, Heidelberg},
+  pages     = {636},
+  doi       = {10.1007/978-3-662-12616-5},
+  isbn      = {978-3-540-54062-5}
+}
+
+@misc{allan2021,
+  title  = {Rough Path Theory: Lecture Notes},
+  author = {Allan, Andrew L.},
+  year   = {2021},
+  url    = {https://metaphor.ethz.ch/x/2021/fs/401-4611-21L/}
 }
