--- a/docs/_static/references.bib
+++ b/docs/_static/references.bib
@@ -95,6 +95,28 @@
   primaryclass  = {math.PR}
 }
 
+# Numerical Analysis
+@book{hildebrand1987,
+  title={Introduction to Numerical Analysis},
+  author={Hildebrand, F.B.},
+  isbn={9780486653631},
+  lccn={73011315},
+  series={Dover books on advanced mathematics},
+  url={https://books.google.co.uk/books?id=f7We11dz0_kC},
+  year={1987},
+  publisher={Dover Publications}
+}
+@book{lanczos1988,
+  title={Applied Analysis},
+  author={Lanczos, C.},
+  isbn={9780486656564},
+  lccn={lc88003961},
+  series={Dover Books on Mathematics},
+  url={https://books.google.co.uk/books?id=6E85hExIqHYC},
+  year={1988},
+  publisher={Dover Publications}
+}
+
 # Ordinary Calculus
 @inbook{iserles2008,
   booktitle = {A First Course in the Numerical Analysis of Differential Equations},
