--- a/docs/_static/references.bib
+++ b/docs/_static/references.bib
@@ -15,7 +15,6 @@
   url       = {http://www.jstor.org/stable/2005001}
 }
 
-
 @article{stroudSecrest1963,
   title     = {Approximate Integration Formulas for Certain Spherically Symmetric Regions},
   author    = {Stroud, A. H. and Secrest, Don},
@@ -31,7 +30,7 @@
 
 @book{stroud1971,
   title     = {Approximate Calculation of Multiple Integrals},
-  author    = {Stoud, A. H.},
+  author    = {Stroud, A. H.},
   year      = {1971},
   publisher = {Prentice-Hall},
   pages     = {431},
@@ -47,8 +46,17 @@
   number  = {6},
   pages   = {221--227},
   issn    = {0041-5553},
-  doi     = {https://doi.org/10.1016/0041-5553(75)90218-9},
+  doi     = {10.1016/0041-5553(75)90218-9},
   url     = {https://www.sciencedirect.com/science/article/pii/0041555375902189}
+}
+
+@book{rabinowitz1984
+  title = {Methods of Numerical Integration},
+  author = {Davis, P. J. and Rabinowitz, P.},
+  year = {1984},
+  publisher = {Academic Press},
+  isbn = {978-0-12-206360-2},
+  doi = {10.1016/C2013-0-10566-1}
 }
 
 @article{cools1997,
@@ -59,7 +67,18 @@
   publisher = {Cambridge University Press},
   pages     = {1-54},
   volume    = {6},
-  doi       = {https://doi.org/10.1017/S0962492900002701}
+  doi       = {10.1017/S0962492900002701}
+}
+
+@book{brass2011,
+  title={Quadrature Theory: The Theory of Numerical Integration on a Compact Interval},
+  author={Brass, H. and Petras, K.},
+  isbn={9780821853610},
+  lccn={2011030201},
+  series={Mathematical surveys and monographs},
+  url={https://books.google.co.uk/books?id=cx-CAwAAQBAJ},
+  year={2011},
+  publisher={American Mathematical Society}
 }
 
 @article{satoshi2021,
@@ -69,7 +88,19 @@
   journal = {Japan Journal of Industrial and Applied Mathematics},
   volume  = {38},
   pages   = {561--577},
-  doi     = {https://doi.org/10.1007/s13160-020-00451-x}
+  doi     = {10.1007/s13160-020-00451-x}
+}
+
+@article{Trefethen2022,
+  title = {Exactness of Quadrature Formulas},
+  author = {Trefethen, Lloyd N.},
+  year = {2022},
+  journal = {SIAM Review},
+  volume = {64},
+  number = {1},
+  pages = {132-150},
+  doi = {10.1137/20M1389522},
+  url = {https://people.maths.ox.ac.uk/trefethen/exactness.pdf}
 }
 
 # Cubature on Wiener Space
@@ -126,7 +157,7 @@
   edition   = {2},
   publisher = {Cambridge University Press},
   pages     = {33–52},
-  doi       = {https://doi.org/10.1017/CBO9780511995569.006}
+  doi       = {10.1017/CBO9780511995569.006}
 }
 
 # Stochastic Calculus
@@ -138,6 +169,20 @@
   pages     = {636},
   doi       = {10.1007/978-3-662-12616-5},
   isbn      = {978-3-540-54062-5}
+}
+
+@misc{tehranchi2016,
+  title  = {Stochastic Calculus and Applications},
+  author = {Michael, Tehranchi},
+  year   = {2016},
+  url    = {http://www.statslab.cam.ac.uk/~mike/StoCal/}
+}
+
+@misc{Siegrist2023
+  title  = {Random: Probability, Mathematical Statistics, Stochastic Processes},
+  author = {Kyle, Siegrist},
+  year   = {2023},
+  url    = {https://www.randomservices.org/random/index.html}
 }
 
 @misc{allan2021,
