major api overhaul

--- a/docs/_static/references.bib
+++ b/docs/_static/references.bib
@@ -34,7 +34,8 @@
   year      = {1971},
   publisher = {Prentice-Hall},
   pages     = {431},
-  isbn      = {9780130438935}
+  isbn      = {9780130438935},
+  url       = {https://archive.org/details/approximatecalcu0000stro_b8j7}
 }
 
 @article{mysovskikh1975,
@@ -68,6 +69,17 @@
   pages     = {1-54},
   volume    = {6},
   doi       = {10.1017/S0962492900002701}
+}
+
+@article{victoir2004,
+  title   = {Asymmetric Cubature Formulae with Few Points in High Dimension for Symmetric Measures},
+  author  = {Victoir, Nicolas},
+  year    = {2004},
+  journal = {SIAM Journal on Numerical Analysis},
+  volume  = {42},
+  number  = {1},
+  pages   = {209-227},
+  doi     = {10.1137/S0036142902407952},
 }
 
 @book{brass2011,
