Major overhaul of API, Docs and Tests.

--- a/docs/_static/references.bib
+++ b/docs/_static/references.bib
@@ -51,7 +51,7 @@
   url     = {https://www.sciencedirect.com/science/article/pii/0041555375902189}
 }
 
-@book{rabinowitz1984
+@book{rabinowitz1984,
   title = {Methods of Numerical Integration},
   author = {Davis, P. J. and Rabinowitz, P.},
   year = {1984},
